Give up on react-hot-loader
Unfortunately, not a good fit for our use cases

--- a/packages/transportation/package.json
+++ b/packages/transportation/package.json
@@ -41,7 +41,7 @@
     "prop-types": "15.7.2",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react-dom": "^16.8.4",
     "react-fontawesome": "^1.6.1",
     "react-player": "^0.15.0",
     "react-redux": "^6.0.1",
@@ -92,7 +92,6 @@
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^3.0.0",
-    "react-hot-loader": "^4.0.0",
     "react-test-renderer": "^16.8.4",
     "react-transform-hmr": "^1.0.4",
     "redux-immutable-state-invariant": "^1.2.4",
