--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -40,8 +40,7 @@
     "autoprefixer": "^9.4.10",
     "emotion": "^10.0.6",
     "react": "^16.8.4",
-    "react-dom": "npm:@hot-loader/react-dom",
-    "react-hot-loader": "^4.0.0",
+    "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
