--- a/packages/2018-transportation-systems/package.json
+++ b/packages/2018-transportation-systems/package.json
@@ -39,7 +39,7 @@
     "prop-types": "^15.7.2",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
@@ -92,7 +92,6 @@
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^3.0.0",
-    "react-hot-loader": "^4.0.0",
     "react-transform-hmr": "^1.0.4",
     "redux-immutable-state-invariant": "^1.2.4",
     "redux-mock-store": "^1.2.1",
