--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -40,8 +40,7 @@
     "@hackoregon/webpack-common": "^1.0.0-alpha.1c62c05f",
     "autoprefixer": "^9.4.10",
     "react": "^16.8.4",
-    "react-dom": "npm:@hot-loader/react-dom",
-    "react-hot-loader": "^4.0.0",
+    "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
