--- a/packages/budget/package.json
+++ b/packages/budget/package.json
@@ -43,7 +43,7 @@
     "ramda": "^0.23.0",
     "rc-slider": "^7.0.2",
     "react": "^16.8.4",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
@@ -89,7 +89,6 @@
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^3.0.0",
-    "react-hot-loader": "^4.0.0",
     "react-test-renderer": "^16.8.4",
     "react-transform-hmr": "^1.0.4",
     "redux-immutable-state-invariant": "^1.2.4",
