--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -84,7 +84,7 @@
     "react": "^16.8.4",
     "react-addons-transition-group": "16.0.0-alpha.3",
     "react-dimensions": "^1.3.1",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react-dom": "^16.8.4",
     "react-faux-dom": "^3.0.1",
     "react-map-gl": "4.1.1",
     "react-map-gl-geocoder": "^1.7.0",
