--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -47,7 +47,7 @@
     "query-string": "^4.3.3",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react-dom": "^16.8.4",
     "react-helmet": "^5.0.3",
     "react-redux": "^6.0.1",
     "react-router": "^3.0.0",
@@ -88,7 +88,6 @@
     "nock": "^10.0.6",
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
-    "react-hot-loader": "^4.0.0",
     "react-test-renderer": "^16.8.4",
     "react-transform-hmr": "^1.0.4",
     "redux-immutable-state-invariant": "^1.2.4",
