Fix syntax in .prettierrc

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,8 +5,8 @@
   "singleQuote": false,
   "jsxSingleQuote": false,
   "trailingComma": "none",
-  "bracketSpacing": "true",
-  "jsxBracketSameLine": "false",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
   "arrowParens": "avoid",
   "proseWrap": "preserve",
   "htmlWhitespaceSensitivity": "css",
