--- a/packages/budget/.istanbul.yml
+++ b/packages/budget/.istanbul.yml
@@ -1,4 +1,4 @@
 instrumentation:
-  excludes: ['*.test.js']
-  extensions: ['.js']
+  excludes: ["*.test.js"]
+  extensions: [".js"]
   include-all-sources: true
