--- a/packages/transportation/appveyor.yml
+++ b/packages/transportation/appveyor.yml
@@ -1,8 +1,8 @@
 environment:
   matrix:
-  - nodejs_version: "6"
-  - nodejs_version: "5"
-  - nodejs_version: "4"
+    - nodejs_version: "6"
+    - nodejs_version: "5"
+    - nodejs_version: "4"
 
 install:
   - ps: Install-Product node $env:nodejs_version
@@ -19,11 +19,11 @@ test_script:
 build: off
 
 notifications:
-- provider: Email
-  to:
-  - davidedaniel@gmail.com
-  subject: 'Build failed: hackor-frontend-starter'
-  message: CI build failed. Check https://ci.appveyor.com/project/DavidDaniel/hackor-frontend-starter/.
-  on_build_success: false
-  on_build_failure: true
-  on_build_status_changed: false
+  - provider: Email
+    to:
+      - davidedaniel@gmail.com
+    subject: "Build failed: hackor-frontend-starter"
+    message: CI build failed. Check https://ci.appveyor.com/project/DavidDaniel/hackor-frontend-starter/.
+    on_build_success: false
+    on_build_failure: true
+    on_build_status_changed: false
