--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,10 @@
 {
   "parser": "babel-eslint",
-  "extends": [
-    "airbnb",
-    "prettier",
-    "prettier/react"
-  ],
+  "extends": ["airbnb", "prettier", "prettier/react"],
   "env": {
     "mocha": true
   },
-  "plugins": [
-    "react",
-    "prettier"
-  ],
+  "plugins": ["react", "prettier"],
   "rules": {
     "jsx-a11y/img-has-alt": 0,
     "prefer-arrow-callback": 0,
@@ -24,10 +17,7 @@
     "import/no-extraneous-dependencies": [
       "error",
       {
-        "devDependencies": [
-          "**/*.story.js",
-          "**/*.test.js"
-        ]
+        "devDependencies": ["**/*.story.js", "**/*.test.js"]
       }
     ]
   },
