--- a/.prettierrc
+++ b/.prettierrc
@@ -10,5 +10,5 @@
   "arrowParens": "avoid",
   "proseWrap": "preserve",
   "htmlWhitespaceSensitivity": "css",
-  "endOfLine": "lf",
+  "endOfLine": "lf"
 }
