--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -8,7 +8,8 @@
     "start:dev": "cross-env NODE_ENV=development babel-node server/dev.js",
     "start:prod": "yarn run build && cross-env NODE_ENV=production node server",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --progress --config ./webpack.config.js",
-    "test": "echo 'No tests!'"
+    "test": "echo 'No tests!'",
+    "lint": "eslint --fix src"
   },
   "repository": {
     "type": "git",
