--- a/packages/2018-transportation-systems/package.json
+++ b/packages/2018-transportation-systems/package.json
@@ -27,7 +27,8 @@
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config ./webpack.config.js",
     "start:dev": "cross-env NODE_ENV=development babel-node server",
     "start:prod": "cross-env NODE_ENV=production node server",
-    "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'"
+    "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'",
+    "lint": "eslint --fix src"
   },
   "dependencies": {
     "@hackoregon/component-library": "^1.0.0-alpha.1c62c05f",
