--- a/packages/mock-wrapper/package.json
+++ b/packages/mock-wrapper/package.json
@@ -12,7 +12,8 @@
     "build:esm": "babel src --out-dir es --copy-files --no-comments",
     "build:cjs": "babel src --out-dir dist --copy-files --no-comments",
     "build": "BABEL_ENV=esm yarn run build:esm && BABEL_ENV=cjs yarn run build:cjs",
-    "configure": "yarn run build"
+    "configure": "yarn run build",
+    "lint": "eslint --fix src"
   },
   "license": "MIT",
   "dependencies": {
