--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@storybook/addon-knobs": "^4.1.12",
     "@storybook/addon-links": "^4.1.12",
     "@storybook/addon-notes": "^4.1.12",
+    "@storybook/addon-storysource": "4",
     "@storybook/react": "^4.1.12",
     "@storybook/storybook-deployer": "^2.3.0",
     "autoprefixer": "^9.4.10",
