--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -23,11 +23,31 @@
   },
   "homepage": "https://github.com/hackoregon/civic#readme",
   "dependencies": {
+    "@emotion/core": "^10.0.9",
+    "@emotion/styled": "^10.0.9",
+    "@hackoregon/2018-disaster-resilience": "^3.0.0",
+    "@hackoregon/2018-example-farmers-markets": "^3.0.0",
+    "@hackoregon/2018-housing-affordability": "^3.0.0",
+    "@hackoregon/2018-local-elections": "^3.0.0",
+    "@hackoregon/2018-neighborhood-development": "^3.0.0",
+    "@hackoregon/2018-transportation-systems": "^3.0.0",
+    "@hackoregon/civic-sandbox": "^3.0.0",
+    "@hackoregon/component-library": "^3.0.0",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "express": "^4.14.1",
     "nuka-carousel": "^4.5.3",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.8",
+    "react-typekit": "^1.1.3",
+    "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -41,16 +61,6 @@
     "@hackoregon/dev-server": "^3.0.0",
     "@hackoregon/webpack-common": "^3.0.0",
     "autoprefixer": "^9.4.10",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-redux": "^6.0.1",
-    "react-router": "^3.0.0",
-    "react-router-redux": "^4.0.8",
-    "react-typekit": "^1.1.3",
-    "redux": "^4.0.1",
-    "redux-form": "^8.1.0",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.1.0",
     "webpack": "^4.29.6",
     "webpack-blocks": "^2.0.0-rc",
     "webpack-cli": "^3.2.3",
