--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "canary": "lerna publish --skip-git --skip-npm --canary",
     "clean": "lerna clean && rimraf node_modules",
     "watch": "node scripts/watch",
+    "start": "node scripts/start",
     "deploy-storybook": "BABEL_ENV=esm storybook-to-ghpages",
     "in": "lerna run --scope",
     "link:all": "lerna link",
