--- a/packages/housing/package.json
+++ b/packages/housing/package.json
@@ -27,6 +27,7 @@
   "engines": {
     "npm": ">=3"
   },
+  "private": true,
   "scripts": {
     "clean": "rimraf build && mkdir build",
     "start": "yarn start:dev",
