--- a/packages/transportation/package.json
+++ b/packages/transportation/package.json
@@ -21,6 +21,7 @@
   "engines": {
     "npm": ">=3"
   },
+  "private": true,
   "scripts": {
     "clean": "rimraf ./build && mkdir build",
     "start": "npm run start:dev",
