update publishing script

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "bootstrap": "yarn install --frozen-lockfile",
     "build": "lerna run build",
     "configure": "lerna run configure",
-    "tag": "lerna publish --skip-npm",
-    "canary": "lerna publish --skip-git --skip-npm --canary",
+    "tag": "lerna version",
+    "canary": "lerna publish --skip-git --canary",
     "clean": "lerna clean && rimraf node_modules",
     "watch": "node scripts/watch",
     "deploy-storybook": "BABEL_ENV=esm storybook-to-ghpages",
