--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -96,5 +96,6 @@
     "react-test-renderer": "^16.8.4",
     "styled-components": "^1.4.2",
     "victory": "^32.0.2"
-  }
+  },
+  "gitHead": "b50f7a7fca617964ade5a3ecb5225fee17b20fe4"
 }
