--- a/packages/webpack-common/package.json
+++ b/packages/webpack-common/package.json
@@ -7,6 +7,11 @@
     "type": "git",
     "url": "git+https://github.com/hackoregon/civic.git"
   },
+  "keywords": [
+    "civic",
+    "hackoregon"
+  ],
+  "private": false,
   "author": "",
   "license": "MIT",
   "dependencies": {
