--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "lerna run build",
     "configure": "lerna run configure",
     "tag": "lerna version",
-    "canary": "lerna publish --skip-git --canary",
+    "canary": "lerna publish --canary",
     "clean": "lerna clean && rimraf node_modules",
     "watch": "node scripts/watch",
     "deploy-storybook": "BABEL_ENV=esm storybook-to-ghpages",
