--- a/packages/mock-wrapper/package.json
+++ b/packages/mock-wrapper/package.json
@@ -11,7 +11,8 @@
   "private": false,
   "keywords": [
     "civic",
-    "hackoregon"
+    "hackoregon",
+    "magic"
   ],
   "scripts": {
     "build:esm": "babel src --out-dir es --copy-files --no-comments",
