--- a/packages/civic-babel-presets/package.json
+++ b/packages/civic-babel-presets/package.json
@@ -17,7 +17,8 @@
     "babel",
     "presets",
     "civic",
-    "hackoregon"
+    "hackoregon",
+    "magic"
   ],
   "dependencies": {
     "@babel/core": "^7.0.0",
