--- a/packages/budget/package.json
+++ b/packages/budget/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/civic-budget",
-  "version": "3.0.0-alpha.9d477899",
+  "version": "3.0.0",
   "description": "Civic/Budget 2017",
   "author": "David Daniel",
   "license": "MIT",
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "@hackoregon/component-library": "^3.0.0-alpha.9d477899",
+    "@hackoregon/component-library": "^3.0.0",
     "compression": "^1.6.2",
     "cross-env": "^5.2.0",
     "d3": "^4.8.0",
@@ -60,9 +60,9 @@
     "@babel/core": "^7.0.0",
     "@babel/node": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "@hackoregon/civic-babel-presets": "^3.0.0-alpha.9d477899",
-    "@hackoregon/mock-wrapper": "^3.0.0-alpha.9d477899",
-    "@hackoregon/webpack-common": "^3.0.0-alpha.9d477899",
+    "@hackoregon/civic-babel-presets": "^3.0.0",
+    "@hackoregon/mock-wrapper": "^3.0.0",
+    "@hackoregon/webpack-common": "^3.0.0",
     "autoprefixer": "^9.4.10",
     "babel-jest": "^24.5.0",
     "chai": "^4.2.0",
