--- a/packages/civic-babel-presets/package.json
+++ b/packages/civic-babel-presets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/civic-babel-presets",
-  "version": "3.0.0-alpha.9d477899",
+  "version": "3.0.0",
   "description": "Unified babel presets for civic",
   "main": "index.js",
   "scripts": {
