--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hackoregon/component-library",
-  "version": "3.0.0-alpha.9d477899",
+  "version": "3.0.0",
   "description": "Official repo for Hack Oregon React component library",
   "main": "dist/index.js",
   "modules": "es/index.js",
