--- a/packages/civic-babel-presets/package.json
+++ b/packages/civic-babel-presets/package.json
@@ -17,8 +17,7 @@
     "babel",
     "presets",
     "civic",
-    "hackoregon",
-    "magic"
+    "hackoregon"
   ],
   "dependencies": {
     "@babel/core": "^7.0.0",
