--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -22,8 +22,7 @@
   "private": false,
   "keywords": [
     "civic",
-    "hackoregon",
-    "✨"
+    "hackoregon"
   ],
   "devDependencies": {
     "@babel/cli": "^7.0.0",
