--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,10 @@
   "version": "3.0.0",
   "useWorkspaces": true,
   "npmClient": "yarn",
-  "private": true
+  "private": true,
+  "command": {
+    "publish": {
+      "message": "(🧹release): publish %s"
+    }
+  }
 }
