--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "bootstrap": "yarn install --frozen-lockfile",
     "build": "lerna run build",
     "configure": "lerna run configure",
-    "tag": "lerna version",
-    "canary": "lerna publish --canary",
+    "publish-patch": "lerna publish bump patch --yes",
+    "publish-minor": "lerna publish bump minor --yes",
+    "publish-major": "lerna publish bump major --yes",
+    "publish-canary": "lerna publish --canary --yes --preid ci --npm-tag=ci -m '(🐦ci-canary): publish %s'",
     "clean": "lerna clean && rimraf node_modules",
     "watch": "node scripts/watch",
     "deploy-storybook": "BABEL_ENV=esm storybook-to-ghpages",
     "in": "lerna run --scope",
-    "link:all": "lerna link",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint --no-bail -- --fix",
     "storybook": "BABEL_ENV=esm start-storybook -p 6006",
