revert publishing commits;

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router",
     "webpack",
     "redux",
+    "boilerplate",
     "monorepo",
     "lerna",
     "hackoregon"
@@ -27,11 +28,11 @@
     "publish-patch": "lerna publish bump patch --yes",
     "publish-minor": "lerna publish bump minor --yes",
     "publish-major": "lerna publish bump major --yes",
-    "publish-canary": "lerna publish preminor --yes --preid ci --dist-tag=ci -m '(🐦ci-canary): publish %s' --force-publish=*",
+    "publish-canary": "lerna publish --canary --yes --preid ci --npm-tag=ci -m '(🐦ci-canary): publish %s'",
     "clean": "lerna clean && rimraf node_modules",
     "watch": "node scripts/watch",
     "start": "node scripts/start",
-    "deploy-storybook": "BABEL_ENV=esm storybook-to-ghpages --existing-output-dir=.out",
+    "deploy-storybook": "BABEL_ENV=esm storybook-to-ghpages",
     "in": "lerna run --scope",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint --no-bail -- --fix",
