--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@storybook/addon-links": "^5.0.6",
     "@storybook/addon-notes": "^5.0.6",
     "@storybook/addon-storysource": "5.0.6",
+    "@storybook/addon-viewport": "^5.0.11",
     "@storybook/react": "^5.0.6",
     "@storybook/storybook-deployer": "^2.3.0",
     "autoprefixer": "^9.4.10",
