--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
+    "hygen": "^4.0.2",
     "istanbul": "^0.4.4",
     "jest": "^24.5.0",
     "jsdom": "^14.0.0",
