--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "scripts": {
     "bootstrap": "yarn install --frozen-lockfile",
     "build": "lerna run build",
+    "card": "yarn hygen story-card with-prompt",
     "configure": "lerna run configure",
     "publish-patch": "lerna publish bump patch --yes",
     "publish-minor": "lerna publish bump minor --yes",
