--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "clean": "lerna clean && rimraf node_modules",
     "watch": "node scripts/watch",
     "start": "node scripts/start",
-    "deploy-storybook": "BABEL_ENV=esm storybook-to-ghpages",
+    "deploy-storybook": "NODE_OPTIONS=--max_old_space_size=4096 BABEL_ENV=esm storybook-to-ghpages",
     "in": "lerna run --scope",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint --no-bail -- --fix",
