--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -13,7 +13,7 @@
     "test:watch": "yarn run test -- -w",
     "lint": "eslint src stories",
     "storybook": "node scripts/storybook.js",
-    "start": "node scripts/start.js"        
+    "start": "node scripts/start.js"
   },
   "author": "David Daniel <davidedaniel@gmail.com> (http://davidedaniel.github.io)",
   "license": "MIT",
@@ -84,6 +84,7 @@
     "d3-shape": "^1.0.6",
     "d3-time-format": "^2.1.3",
     "deck.gl": "^6.4.7",
+    "global": "^4.3.2",
     "emotion": "^10.0.9",
     "lodash": "^4.17.11",
     "mapbox-gl": "^0.53.1",
