--- a/packages/project-disaster-trail/package.json
+++ b/packages/project-disaster-trail/package.json
@@ -47,12 +47,14 @@
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router": "^3.0.0",
+    "react-router-dom": "^5.0.1",
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-logger": "^2.8.2",
     "redux-thunk": "^2.1.0",
-    "reselect": "^3.0.0"
+    "reselect": "^3.0.0",
+    "styled-components": "^4.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
