--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -31,6 +31,7 @@
     "@hackoregon/2018-local-elections": "^3.0.0",
     "@hackoregon/2018-neighborhood-development": "^3.0.0",
     "@hackoregon/2018-transportation-systems": "^3.0.0",
+    "@hackoregon/2019-housing": "^1.0.0",
     "@hackoregon/civic-sandbox": "^3.0.0",
     "@hackoregon/component-library": "^3.0.0",
     "chalk": "^1.1.3",
