--- a/packages/project-disaster-trail/package.json
+++ b/packages/project-disaster-trail/package.json
@@ -54,6 +54,7 @@
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-logger": "^2.8.2",
+    "redux-starter-kit": "^0.5.1",
     "redux-thunk": "^2.1.0",
     "reselect": "^3.0.0"
   },
