--- a/packages/project-disaster-trail/package.json
+++ b/packages/project-disaster-trail/package.json
@@ -45,6 +45,7 @@
     "prop-types": "^15.7.2",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
+    "react-circular-progressbar": "^2.0.1",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router": "^3.0.0",
