Add partially finished card to housing route & remove unused files

--- a/packages/2019-housing/package.json
+++ b/packages/2019-housing/package.json
@@ -10,7 +10,8 @@
     "react-router",
     "webpack",
     "redux",
-    "hackoregon"
+    "hackoregon",
+    "2019"
   ],
   "repository": {
     "type": "git",
