--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -73,6 +73,7 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
+    "@material-ui/core": "^4.1.3",
     "chai-enzyme": "^1.0.0-beta.1",
     "cheerio": "^1.0.0-rc.2",
     "classnames": "^2.2.5",
