--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -39,6 +39,7 @@
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "express": "^4.14.1",
+    "lodash": "^4.17.15",
     "nuka-carousel": "^4.5.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
