--- a/.eslintrc
+++ b/.eslintrc
@@ -37,5 +37,15 @@
     "afterEach": true,
     "before": true,
     "after": true
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        "*.test.js",
+      ],
+      "rules": {
+        "no-unused-expressions": "off"
+      }
+    }
+  ]
 }
