--- a/packages/project-disaster-trail/package.json
+++ b/packages/project-disaster-trail/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.14",
     "@hackoregon/component-library": "^3.0.0",
     "@hackoregon/mock-wrapper": "^3.0.0",
     "@hackoregon/webpack-common": "^3.0.0",
@@ -57,8 +58,7 @@
     "redux-logger": "^2.8.2",
     "redux-starter-kit": "^0.5.1",
     "redux-thunk": "^2.1.0",
-    "reselect": "^3.0.0",
-    "styled-components": "^4.3.1"
+    "reselect": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
