--- a/packages/civic-babel-presets/.babelrc
+++ b/packages/civic-babel-presets/.babelrc
@@ -67,6 +67,7 @@
       }
     ],
     "@babel/plugin-proposal-nullish-coalescing-operator",
-    "@babel/plugin-proposal-do-expressions"
+    "@babel/plugin-proposal-do-expressions",
+    "@babel/plugin-transform-react-jsx"
   ]
 }
