--- a/packages/2019-housing/package.json
+++ b/packages/2019-housing/package.json
@@ -31,6 +31,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.10",
     "@hackoregon/component-library": "^3.0.0",
     "axios": "^0.18.0",
     "compression": "^1.6.2",
