--- a/packages/2019-transportation/package.json
+++ b/packages/2019-transportation/package.json
@@ -32,6 +32,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.10",
     "@hackoregon/component-library": "^3.0.0",
     "@hackoregon/dev-server": "^3.0.0",
     "@hackoregon/mock-wrapper": "^3.0.0",
