--- a/packages/mock-wrapper/package.json
+++ b/packages/mock-wrapper/package.json
@@ -29,9 +29,11 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
   },
   "gitHead": "b50f7a7fca617964ade5a3ecb5225fee17b20fe4"
 }
