--- a/packages/2019-template/package.json
+++ b/packages/2019-template/package.json
@@ -39,6 +39,7 @@
     "axios": "^0.18.0",
     "compression": "^1.6.2",
     "cross-env": "^5.2.0",
+    "cross-fetch": "^3.0.4",
     "express": "^4.14.1",
     "invariant": "^2.2.2",
     "prop-types": "^15.7.2",
@@ -52,6 +53,7 @@
     "redux-form": "^8.1.0",
     "redux-logger": "^2.8.2",
     "redux-thunk": "^2.1.0",
+    "reduxful": "^1.2.2",
     "reselect": "^3.0.0"
   },
   "devDependencies": {
