--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "yarn install --frozen-lockfile && yarn --cwd ./packages/component-library/ build && yarn --cwd ./packages/mock-wrapper/ build",
     "build": "lerna run build",
     "card": "yarn hygen api-story-card with-prompt",
+    "card:local-data": "yarn hygen local-data-story-card with-prompt",
     "configure": "lerna run configure",
     "publish-patch": "lerna publish bump patch --yes",
     "publish-minor": "lerna publish bump minor --yes",
