--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -74,6 +74,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.1.3",
+    "@turf/center-of-mass": "^6.0.1",
     "chai-enzyme": "^1.0.0-beta.1",
     "cheerio": "^1.0.0-rc.2",
     "classnames": "^2.2.5",
