--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "version": "3.0.0",
   "useWorkspaces": true,
-  "npmClient": "npm",
+  "npmClient": "yarn",
   "private": true,
   "command": {
     "publish": {
