--- a/packages/2017/package.json
+++ b/packages/2017/package.json
@@ -10,6 +10,7 @@
     "start:prod": "yarn run build && cross-env NODE_ENV=production node server",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --progress --config ./webpack.config.js",
     "test": "echo 'No tests!'",
+    "test:watch": "echo 'No tests!'",    
     "lint": "eslint src"
   },
   "repository": {
