--- a/packages/2018-local-elections/package.json
+++ b/packages/2018-local-elections/package.json
@@ -29,6 +29,7 @@
     "start:dev": "cross-env NODE_ENV=development babel-node server",
     "start:prod": "cross-env NODE_ENV=production node server",
     "test": "cross-env BABEL_ENV=test mocha --opts ./mocha.opts 'src/**/*.test.js'",
+    "test:watch": "yarn test -w",    
     "lint": "eslint src"
   },
   "dependencies": {
