--- a/packages/civic-babel-presets/package.json
+++ b/packages/civic-babel-presets/package.json
@@ -4,7 +4,8 @@
   "description": "Unified babel presets for civic",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "echo 'No tests!'",
+    "test:watch": "echo 'No tests!'",
     "lint": "eslint index.js"
   },
   "author": "David Daniel <davidedaniel@gmail.com> (http://davidedaniel.github.io)",
