--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -10,7 +10,7 @@
     "build": "BABEL_ENV=esm yarn run build:esm && BABEL_ENV=cjs yarn run build:cjs",
     "configure": "yarn run build",
     "test": "BABEL_ENV=test mocha --opts ./mocha.options ./src/**/*.test.js",
-    "test:watch": "yarn run test -- -w",
+    "test:watch": "yarn test -w",
     "lint": "eslint src stories",
     "storybook": "node scripts/storybook.js",
     "start": "node scripts/start.js"
