temporarily disable 2017 from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 - yarn run configure
 matrix:
   include:
-  - env: SUITE=2017
+#  - env: SUITE=2017
   - env: SUITE=2018
   - env: SUITE=COMPONENT_LIBRARY
 script:
