Generate the component

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "card": "yarn new-card",
     "card:local-data": "yarn new-card:local-data",
     "clean": "lerna clean && rimraf node_modules",
+    "component": "yarn new-component",
     "deploy-storybook": "NODE_OPTIONS=--max_old_space_size=4096 BABEL_ENV=esm storybook-to-ghpages",
     "eslint-check": "eslint --print-config . | eslint-config-prettier-check",
     "in": "lerna run --scope",
@@ -34,6 +35,7 @@
     "lint:fix": "lerna run lint --no-bail -- --fix",
     "new-card": "yarn hygen api-story-card with-prompt && yarn",
     "new-card:local-data": "yarn hygen local-data-story-card with-prompt && yarn",
+    "new-component": "yarn hygen component-generator with-prompt",
     "new-package": "yarn hygen package-generator with-prompt && yarn",
     "pretty": "prettier --write \"./**/*.{js,jsx,css,md}\"",
     "publish-canary": "lerna publish --canary --yes --preid ci --npm-tag=ci -m '(🐦ci-canary): publish %s'",
