Create minimal card generator

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build": "lerna run build",
     "card": "yarn new-card",
     "card:local-data": "yarn new-card:local-data",
+    "card:minimal": "yarn new-card:minimal",
     "clean": "lerna clean && rimraf node_modules",
     "component": "yarn new-component",
     "deploy-storybook": "NODE_OPTIONS=--max_old_space_size=4096 BABEL_ENV=esm storybook-to-ghpages",
@@ -35,6 +36,7 @@
     "lint:fix": "lerna run lint --no-bail -- --fix",
     "new-card": "yarn hygen api-story-card with-prompt && yarn",
     "new-card:local-data": "yarn hygen local-data-story-card with-prompt && yarn",
+    "new-card:minimal": "yarn hygen minimal-story-card with-prompt && yarn",
     "new-component": "yarn hygen component-generator with-prompt",
     "new-package": "yarn hygen package-generator with-prompt && yarn",
     "pretty": "prettier --write \"./**/*.{js,jsx,css,md}\"",
