Renamed the Material UI Theme for consistency.  Removed unneeded dependency on material-ui/styles at root level.

--- a/package.json
+++ b/package.json
@@ -66,9 +66,7 @@
       "git add"
     ]
   },
-  "dependencies": {
-    "@material-ui/styles": "^4.3.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
