tillamook card setup

--- a/packages/2018-disaster-resilience/package.json
+++ b/packages/2018-disaster-resilience/package.json
@@ -33,27 +33,28 @@
     "lint": "eslint src"
   },
   "dependencies": {
-    "reduxful": "^1.2.2",
-    "cross-fetch": "^3.0.4",
-    "@hackoregon/component-library": "^4.0.0",
-    "@hackoregon/webpack-common": "^3.0.0",
-    "@hackoregon/mock-wrapper": "^3.0.0",
     "@emotion/core": "^10.0.10",
+    "@hackoregon/component-library": "^4.0.0",
+    "@hackoregon/mock-wrapper": "^3.0.0",
+    "@hackoregon/webpack-common": "^3.0.0",
     "axios": "^0.18.0",
     "compression": "^1.6.2",
     "cross-env": "^5.2.0",
+    "cross-fetch": "^3.0.4",
     "express": "^4.14.1",
     "invariant": "^2.2.2",
     "prop-types": "^15.7.2",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-mathjax": "^1.0.1",
     "react-redux": "^6.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.1.0",
+    "reduxful": "^1.2.2",
     "reselect": "^3.0.0"
   },
   "devDependencies": {
