--- a/package.json
+++ b/package.json
@@ -144,5 +144,6 @@
     "webpack-hot-middleware": "^2.24.3",
     "webpack-md5-hash": "^0.0.6",
     "webpack-node-externals": "^1.5.4"
-  }
+  },
+  "version": "v1.21.1"
 }
