Prepare for Netlify Deployment (#1182)
* yarn build from lerna to yarn workspaces

* add prebuild command

* edit webpack common and add index

* add index

remove index

* edit webpack common

* add redirect

* replace http with https for apis

* change to build netlify

switch order of build script

* Add netlify logo

* move copy-redirects to build-netlify

* temporarily hide netlify badge

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "scripts": {
     "bootstrap": "yarn install --frozen-lockfile && yarn --cwd ./packages/component-library/ build && yarn --cwd ./packages/mock-wrapper/ build",
     "build": "lerna run build",
+    "build-netlify": "yarn workspace @hackoregon/component-library build && yarn workspace @hackoregon/mock-wrapper build && yarn workspace @hackoregon/2018 build && yarn copy-redirects",
     "card": "yarn new-card",
     "card:local-data": "yarn new-card:local-data",
     "card:minimal": "yarn new-card:minimal",
     "clean": "lerna clean && rimraf node_modules",
     "component": "yarn new-component",
+    "copy-redirects": "cp packages/2018/_redirects packages/2018/dist",
     "deploy-storybook": "NODE_OPTIONS=--max_old_space_size=4096 BABEL_ENV=esm storybook-to-ghpages",
     "eslint-check": "eslint --print-config . | eslint-config-prettier-check",
     "in": "lerna run --scope",
