remove maps from notmaps

--- a/packages/ui-notmaps/package.json
+++ b/packages/ui-notmaps/package.json
@@ -40,70 +40,42 @@
     "@babel/register": "^7.0.0",
     "@storybook/addon-a11y": "^5.0.6",
     "@storybook/addon-actions": "^5.0.6",
-    "@storybook/addon-info": "^5.0.6",
     "@storybook/addon-knobs": "^5.0.6",
-    "@storybook/addon-links": "^5.0.6",
-    "@storybook/addon-notes": "^5.0.6",
-    "@storybook/addon-storysource": "5.0.6",
-    "@storybook/addon-viewport": "^5.0.11",
     "@storybook/react": "^5.0.6",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-add-module-exports": "^1.0.0",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.15.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-import-resolver-webpack": "^0.11.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prefer-object-spread": "^1.1.0",
-    "eslint-plugin-react": "^7.12.4",
     "ignore-styles": "^5.0.1",
+    "jsdom": "^14.0.0",
     "mocha": "^6.0.2",
-    "mocha-clean": "^1.0.0",
     "rimraf": "^2.6.2",
     "sinon": "^7.2.7",
     "sinon-chai": "^3.3.0",
-    "source-map-support": "^0.4.11",
-    "webpack": "^4.29.6",
-    "webpack-blocks": "^2.0.0-rc",
-    "webpack-cli": "^3.2.3"
+    "source-map-support": "^0.4.11"
   },
   "dependencies": {
     "@emotion/core": "^10.0.15",
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.3.3",
-    "@turf/bbox": "^6.0.1",
-    "@turf/center-of-mass": "^6.0.1",
     "copy-to-clipboard": "^3.0.5",
-    "create-react-ref": "^0.1.0",
     "d3": "^4.8.0",
     "d3-format": "1.3.0",
     "d3-time-format": "^2.1.3",
-    "deck.gl": "^6.4.7",
     "emotion-theming": "^10.0.14",
     "formik": "^2.0.4",
     "global": "^4.3.2",
     "lodash": "^4.17.11",
-    "mapbox-gl": "^1.5.0",
     "prop-types": "^15.7.2",
     "rc-slider": "^7.0.2",
     "react": "^16.8.4",
-    "react-dimensions": "^1.3.1",
     "react-dom": "^16.8.4",
-    "react-map-gl": "5.1.2",
-    "react-map-gl-geocoder": "^1.7.0",
     "react-select": "^1.0.0-rc.3",
     "react-share": "^2.2.0",
     "shortid": "^2.2.14",
     "victory": "^32.0.2",
-    "viewport-mercator-project": "^6.2.0",
     "yup": "^0.27.0"
   },
   "peerDependencies": {
