--- a/packages/ui-brand/package.json
+++ b/packages/ui-brand/package.json
@@ -39,10 +39,13 @@
     "source-map-support": "^0.4.11"
   },
   "dependencies": {
-    "@hackoregon/utils": "^0.0.0",
     "@emotion/core": "^10.0.15",
+    "@hackoregon/utils": "^0.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
