--- a/packages/ui-cards/package.json
+++ b/packages/ui-cards/package.json
@@ -40,12 +40,12 @@
     "source-map-support": "^0.4.11"
   },
   "dependencies": {
-    "@hackoregon/ui-core": "^0.0.0",
-    "@hackoregon/ui-charts": "^0.0.0",
-    "@hackoregon/ui-themes": "^0.0.0",
-    "@hackoregon/ui-brand": "^0.0.0",
-    "@hackoregon/utils": "^0.0.0",
     "@emotion/core": "^10.0.15",
+    "@hackoregon/ui-brand": "^0.0.0",
+    "@hackoregon/ui-charts": "^0.0.0",
+    "@hackoregon/ui-core": "^0.0.0",
+    "@hackoregon/ui-themes": "^0.0.0",
+    "@hackoregon/utils": "^0.0.0",
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.3.3",
@@ -59,5 +59,8 @@
   },
   "peerDependencies": {
     "react-router": "^3.2.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
