--- a/packages/ui-core/package.json
+++ b/packages/ui-core/package.json
@@ -56,10 +56,10 @@
     "source-map-support": "^0.4.11"
   },
   "dependencies": {
-    "@hackoregon/ui-themes": "^0.0.0",
-    "@hackoregon/ui-brand": "^0.0.0",
-    "@hackoregon/utils": "^0.0.0",
     "@emotion/core": "^10.0.15",
+    "@hackoregon/ui-brand": "^0.0.0",
+    "@hackoregon/ui-themes": "^0.0.0",
+    "@hackoregon/utils": "^0.0.0",
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.3.3",
@@ -78,5 +78,8 @@
   },
   "peerDependencies": {
     "react-router": "^3.2.4"
+  },  
+  "publishConfig": {
+    "access": "public"
   }
 }
