--- a/packages/ui-maps/package.json
+++ b/packages/ui-maps/package.json
@@ -75,8 +75,8 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
-    "@hackoregon/component-library": "^4.0.0",
     "@emotion/core": "^10.0.15",
+    "@hackoregon/component-library": "^4.0.0",
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.3.3",
@@ -107,7 +107,7 @@
     "viewport-mercator-project": "^6.2.0",
     "yup": "^0.27.0"
   },
-  "peerDependencies": {
-    "react-router": "^3.2.4"
+  "publishConfig": {
+    "access": "public"
   }
 }
