--- a/packages/ui-themes/package.json
+++ b/packages/ui-themes/package.json
@@ -31,5 +31,8 @@
     "lodash": "^4.17.11",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
+  },  
+  "publishConfig": {
+    "access": "public"
   }
 }
