--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hackoregon/utils",
   "version": "0.0.3",
+  "sideEffects": false,
   "description": "Common utils for CIVIC",
   "main": "dist/index.js",
   "modules": "es/index.js",
