--- a/packages/ui-themes/package.json
+++ b/packages/ui-themes/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hackoregon/ui-themes",
   "version": "0.0.3",
+  "sideEffects": false,
   "description": "Common library for CIVIC theme components",
   "main": "dist/index.js",
   "modules": "es/index.js",
