--- a/packages/ui-core/package.json
+++ b/packages/ui-core/package.json
@@ -58,28 +58,20 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.15",
-    "@hackoregon/ui-brand": "^0.0.3",
     "@hackoregon/ui-themes": "^0.0.3",
     "@hackoregon/utils": "^0.0.3",
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.3.3",
-    "copy-to-clipboard": "^3.0.5",
-    "formik": "^2.0.4",
     "global": "^4.3.2",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "rc-slider": "^7.0.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-select": "^1.0.0-rc.3",
     "react-share": "^2.2.0",
-    "shortid": "^2.2.14",
-    "yup": "^0.27.0"
+    "shortid": "^2.2.14"
   },
-  "peerDependencies": {
-    "react-router": "^3.2.4"
-  },  
   "publishConfig": {
     "access": "public"
   }
