--- a/packages/ui-maps/package.json
+++ b/packages/ui-maps/package.json
@@ -43,11 +43,14 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.15",
-    "@hackoregon/component-library": "^4.0.0",
+    "@hackoregon/ui-brand": "^0.0.4",
+    "@hackoregon/ui-charts": "^0.0.4",
     "@hackoregon/ui-core": "^0.0.4",
     "@hackoregon/ui-themes": "^0.0.4",
+    "@hackoregon/utils": "^0.0.4",
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.4.1",
+    "@material-ui/styles": "^4.3.3",
     "@turf/bbox": "^6.0.1",
     "@turf/center-of-mass": "^6.0.1",
     "create-react-ref": "^0.1.0",
@@ -62,7 +65,6 @@
     "react-dom": "^16.8.4",
     "react-map-gl": "5.1.2",
     "react-map-gl-geocoder": "^1.7.0",
-    "react-select": "^1.0.0-rc.3",
     "shortid": "^2.2.14",
     "viewport-mercator-project": "^6.2.0"
   },
