yarn doctor errors - 2018

--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -71,6 +71,13 @@
     "@hackoregon/dev-server": "^3.0.0",
     "@hackoregon/webpack-common": "^3.0.0",
     "autoprefixer": "^9.4.10",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-enzyme": "^1.0.0-beta.1",
+    "jsdom": "^14.0.0",
+    "ramda": "^0.23.0",
+    "sinon": "^7.2.7",
+    "sinon-chai": "^3.3.0",
     "webpack": "^4.29.6",
     "webpack-blocks": "^2.0.0-rc",
     "webpack-cli": "^3.2.3",
