yarn doctor errors - civic-sandbox

--- a/packages/civic-sandbox/package.json
+++ b/packages/civic-sandbox/package.json
@@ -33,11 +33,13 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.10",
     "@hackoregon/component-library": "^4.0.0",
     "@hackoregon/mock-wrapper": "^3.0.0",
     "axios": "^0.18.0",
     "compression": "^1.6.2",
     "cross-env": "^5.2.0",
+    "d3-scale": "^3.1.0",
     "express": "^4.14.1",
     "invariant": "^2.2.2",
     "lodash": "^4.17.19",
@@ -48,6 +50,7 @@
     "react-redux": "^6.0.1",
     "react-router": "^3.2.4",
     "react-router-redux": "^4.0.8",
+    "react-select": "^1.0.0-rc.3",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.1.0",
@@ -60,6 +63,7 @@
     "@babel/node": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@hackoregon/civic-babel-presets": "^3.0.0",
+    "@hackoregon/dev-server": "workspace:packages/dev-server",
     "@hackoregon/webpack-common": "^3.0.0",
     "autoprefixer": "^9.4.10",
     "babel-jest": "^24.5.0",
