--- a/packages/ui-maps/package.json
+++ b/packages/ui-maps/package.json
@@ -27,8 +27,10 @@
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-knobs": "^5.3.18",
     "@storybook/react": "^5.3.18",
+    "babel-loader": "^8.0.0",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
+    "cheerio": "^0.22.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^5.15.1",
@@ -38,7 +40,8 @@
     "rimraf": "^2.6.2",
     "sinon": "^7.2.7",
     "sinon-chai": "^3.3.0",
-    "source-map-support": "^0.4.11"
+    "source-map-support": "^0.4.11",
+    "webpack": "^4.29.6"
   },
   "dependencies": {
     "@emotion/core": "^10.0.15",
@@ -64,6 +67,7 @@
     "react-dom": "^16.8.4",
     "react-map-gl": "5.1.2",
     "react-map-gl-geocoder": "^1.7.0",
+    "react-select": "^1.0.0-rc.3",
     "shortid": "^2.2.14",
     "viewport-mercator-project": "^6.2.0"
   },
