--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@storybook/addon-storysource": "^5.0.6",
     "@storybook/addon-viewport": "^5.0.11",
     "@storybook/react": "^5.0.6",
+    "@storybook/source-loader": "^5.3.19",
     "@storybook/storybook-deployer": "^2.3.0",
     "autoprefixer": "^9.4.10",
     "babel-eslint": "^10.0.1",
