--- a/packages/2018/package.json
+++ b/packages/2018/package.json
@@ -74,6 +74,8 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-enzyme": "^1.0.0-beta.1",
+    "cheerio": "^0.22.0",
+    "enzyme": "^3.9.0",
     "jsdom": "^14.0.0",
     "ramda": "^0.23.0",
     "sinon": "^7.2.7",
